# task-centralization-system

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  CODE_REVIEW_RESPONSES.md  README.md  granola_sync.py  main.py  pyproject.toml  ruff.toml  run_sync.sh
.github/workflows/: ci.yml
config/: credentials.example.json  credentials.minimal.json
deployment/: README.md  com.rzp.slack-monitor.plist
scripts/: SLACK_CDP_TEST_README.md  dashboard.py  deploy_slack_monitor.sh  find_message_area.py  find_slack_messages.py  granola_sync.py  health_check.py  inspect_current_view.py  inspect_slack_dom.py  install_cron.sh  run_sync.sh  start_slack_with_cdp.sh  test_message_extraction.py  test_slack_cdp.py  test_slack_monitor.sh  weekly_validation.py
src/: __init__.py  credential_manager.py  format_converter.py  granola_fetcher.py  llm_parser.py  llm_parser_perplexity.py  obsidian_writer.py  processor.py  slack_cdp_monitor.py  sync_state.py
tests/: test_credential_manager.py  test_format_converter.py  test_obsidian_writer.py
